try fixescroll body on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,3 @@
-html {
-  overflow: hidden;
-}
 body, html {
     height: 100%;
   }
@@ -10,7 +7,7 @@ body {
     margin: 0 !important;
     background-image: url(../images/background-home-bdb.png);
     /* Full height */
-      height: 100%;
+    min-height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     /* background-repeat: no-repeat; */
